# localdoc

./: .gitignore  Cargo.toml  README.md  pyproject.toml
localdoc/: config.py  configuration.py  database.py  default.py  initializer.py  ipc.py  main.py  packages.py
localdoc/client/: __init__.py  arguments.py  client.py  config.py  console.py
localdoc/client/execution_tasks/: __init__.py  base_class.py  close.py  close_daemon.py  install.py  list.py  remove.py  serve.py
localdoc/daemon/: __init__.py  launcher.py  localdocd  utils.py
localdoc_service/: debug.py  handler.py  journal.py  main.py  run.py  server.py  service.py  tables.sql
localdoc_service/command/: __init__.py  commands.py  inspector.py
localdoc_service/database/: __init__.py  tables.sql
localdocctl/: Cargo.toml
localdocctl/src/: main.rs
localdoclib/: Cargo.toml
localdoclib/src/service/socket/: api.rs
localdocsrv/: Cargo.toml
lodoctl/: Cargo.toml  build.rs
lodoctl/src/: lib.rs  main.rs
lodolib/: Cargo.toml
lodolib/src/: lib.rs  process.rs  socket.rs  utils.rs
lodolib/src/service/socket/: mod.rs
lodolib/tests/: socket_communication.rs
lodosrv/: Cargo.toml
lodosrv/src/: main.rs
lodosrv/src/service/: mod.rs
src/: api.rs  constants.rs  lib.rs  main.rs  process.rs  start.rs
src/service/: constants.rs  error.rs  mod.rs  process.rs
src/socket/: api.rs  mod.rs
src/utils/: mod.rs
tests/: socket_communication.rs
