[workspace]
resolver = "2"
members = ["lodoctl", "lodolib", "lodosrv"]

[workspace.package]
authors = ["Michel Novus <michelnovus@gmail.com>"]
description = "Localdoc es un conjunto de programas con el objetivo de guardar y servir documentación web sin conexión a Intenet."
readme = "README.md"
repository = "https://github.com/michelnovus/localdoc"
license = "MIT"
edition = "2021"
keywords = ["service", "server", "documentation"]
publish = false
