[build-system]
requires = ["setuptools>=65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "localdoc"
version = "0.0.1"
authors = [{ name = "Michel Novus", email = "michelnovus@gmail.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
]
dependencies = ["flask>=3.0.0"]

[project.urls]
"Homepage" = "https://github.com/michelnovus/localdoc"
