[package]
name = "localdocctl"
version = "0.1.0"
authors = ["Michel Novus <michelnovus@gmail.com>"]
description = ""
readme = "README.md"
repository = "https://github.com/michelnovus/localdoc"
license = "MIT"
edition = "2021"
keywords = ["service", "server", "documentation"]

publish = false

[dependencies]
fork = "0.1.23"
localdoclib = { path = "../localdoclib" }
