[package]
name = "lodoctl"
description = "Interfaz de consola para interactuar con el servicio en segundo plano."
version = "0.1.0"
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
fork = "0.1.23"
lodolib = { path = "../lodolib" }
