[package]
name = "lodolib"
description = "Biblioteca de Localdoc."
version = "0.1.0"
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
dirs = "5.0"
users = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
