[package]
name = "lodosrv"
description = "Servicio servidor de localdoc, se ejecuta en segundo plano."
version = "0.1.0"
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
lodolib = { path = "../lodolib" }
fork = "0.1.23"
